--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -129,7 +129,8 @@
                     <i class="bi bi-chevron-down small"></i>
                 </a>
                 <div class="collapse ms-3" id="generalMenu">
-                    <a asp-action="Index" asp-controller="GeneralConsignment" class="nav-link text-white-50">Job Listing</a>
+                    <a asp-action="Index" asp-controller="GeneralConsignment" class="nav-link text-white-50">Consignment Listing</a>
+                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">Create New Consignment</a>
                     <a href="#" class="nav-link text-white-50">Test Link 2</a>
                 </div>
             </div>
