--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -104,7 +104,7 @@
                 <div class="collapse ms-3" id="setupsMenu">
                     <a asp-action="Index" asp-controller="User" class="nav-link text-white-50">Users</a>
                     <a asp-action="CompanyProfile" asp-controller="Dashboard" class="nav-link text-white-50">Company Profile</a>
-                    <a asp-action="DutyTypes" asp-controller="Item" class="nav-link text-white-50">Duty & Charges</a>
+                    <a asp-action="Index" asp-controller="Header" class="nav-link text-white-50">Duty & Charges</a>
                     <a asp-action="Index" asp-controller="Item" class="nav-link text-white-50">Items</a>
                     <a asp-action="Index" asp-controller="Maritime" class="nav-link text-white-50">Maritime</a>
                 </div>
