--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -130,7 +130,10 @@
                 </a>
                 <div class="collapse ms-3" id="generalMenu">
                     <a asp-action="Index" asp-controller="GeneralConsignment" class="nav-link text-white-50">Consignment Listing</a>
-                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">Create New Consignment</a>
+                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Home Consumption</a>
+                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Into-Bond</a>
+                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Safe Transportation</a>
+                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Trans-Shipment (TP)</a>
                     <a href="#" class="nav-link text-white-50">Test Link 2</a>
                 </div>
             </div>
@@ -195,6 +198,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.8/css/dataTables.bootstrap5.min.css">
     <script src="https://cdn.datatables.net/1.13.8/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.8/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
