--- a/PPCMD/Views/GeneralConsignment/Index.cshtml
+++ b/PPCMD/Views/GeneralConsignment/Index.cshtml
@@ -28,7 +28,7 @@
                     {
                         <tr>
                             <td>@bl.Id</td>
-                            <td>@bl.BLDate.ToString("yyyy-MM-dd")</td>
+                            <td>@bl.PendingBL.BLDate.ToString("yyyy-MM-dd")</td>
                             <td>@bl.LCId</td>
                             <td>@bl.PendingBL?.BLNumber</td>
                             <td>@bl.Company?.CompanyName</td>
