HC Create Complete

--- a/PPCMD/Views/HC/Create.cshtml
+++ b/PPCMD/Views/HC/Create.cshtml
@@ -164,7 +164,7 @@
 
                                     <div class="col-md-1">
                                         <label asp-for="PendingBL.BL.Size" class="form-label">Size</label>
-                                        <select name="ConsignmentType" class="form-select form-select-sm" required>
+                                        <select asp-for="PendingBL.BL.Size" class="form-select form-select-sm" required>
                                             <option value="">-- Select Size --</option>
                                             <option value="20">20 Feet</option>
                                             <option value="40">40 Feet</option>
