--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -130,7 +130,7 @@
                 </a>
                 <div class="collapse ms-3" id="generalMenu">
                     <a asp-action="Index" asp-controller="GeneralConsignment" class="nav-link text-white-50">Consignment Listing</a>
-                    <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Home Consumption</a>
+                    <a asp-action="Create" asp-controller="HC" class="nav-link text-white-50">New Home Consumption</a>
                     <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Into-Bond</a>
                     <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Safe Transportation</a>
                     <a asp-action="Create" asp-controller="GeneralConsignment" class="nav-link text-white-50">New Trans-Shipment (TP)</a>
