--- a/PPCMD/Views/HC/Create.cshtml
+++ b/PPCMD/Views/HC/Create.cshtml
@@ -133,7 +133,7 @@
                                     </div>
                                     <div class="col-md-1">
                                         <label asp-for="PendingBL.JobDate" class="form-label">Date</label>
-                                        <input asp-for="PendingBL.JobDate" class="form-control form-control-sm date-input" type="text" />
+                                        <input asp-for="PendingBL.JobDate" class="form-control form-control-sm date-input" type="text" required />
                                     </div>
                                     <div class="col-md-4">
                                         <label asp-for="PendingBL.ClientId" class="form-label">Client</label>
